Mostly happy with quality.

--- a/guitar-neck-quiz.html
+++ b/guitar-neck-quiz.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
     <title>Guitar Neck Quiz</title>
-    <!-- <link rel="stylesheet" href="style.css"> -->
+    <link rel="stylesheet" href="guitar-neck-quiz.css">
     <script src="guitar-neck-quiz.js"></script>
   </head>
-  <body>
-
+  <body onload="drawNoteInfo()">
+    <div id="container">
+      <canvas id="note-info" width="500" height="800"></canvas>
+    </div>
   </body>
 </html>
